# workflows

./: .gitignore
tasks/: organise_newsletter.json
tasks/01-research/: analyse_codebase.md
tasks/01-understand/: investigate.md
tasks/02-design/: draft_prd.md  ideate.md  plan.md  prd.md  update_prd.md
tasks/03-build/: adr.md  dev_bootstrap.md  dev_feature.md  develop.md  refactor.md
tasks/04-review/: demo.md  e2e.md
tasks/architect/: analyse_codebase.md
tasks/operation/: branding.md
template_project/: pyproject.toml
template_project/docs/: logs.md  plan.md  prd.md
